--- a/cv/cv.Rmd
+++ b/cv/cv.Rmd
@@ -6,13 +6,13 @@ address: "Bergelson Lab, Duke University"
 phone: "+19842602401"
 email: "e.kalenkovich@gmail.com"
 github: kalenkovich
-date: "`r format(Sys.time(), '%B %Y')`"
 output:
-  vitae::awesomecv:
+  vitae::moderncv:
+    theme: classic
     keep_tex: yes
 headcolor: 009ACD
 aboutme: >
-  I am a research data specialist in the Bergelson lab where we study language acquisition - babies learning language. My role is to provide technical support for research activities, including managing data, code, infrastructure, and documentation, and assisting colleagues with hands-on support and guidance. I strive to improve the efficiency, reproducibility, and robustness of data processes.
+  I am a research data specialist in the Bergelson lab where we study language acquisition - babies learning language. 
 
   I have a background in mathematics and cognitive science, making me well-suited for my role in the lab. Prior to my current position, I led several projects in psycho- and neurolinguistics and worked as a data analyst in the banking industry.
 
