--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -99,46 +99,32 @@ friends to the sport.}
 \section{Current Position}\label{current-position}}
 
 \nopagebreak
-    \cventry{November 2021--Present}{Bergelson Lab}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{Duke University, Durham, NC}{}{\begin{itemize}%
+    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\newline Supervised by Elika Bergelson, Bergelson Lab, Duke University, Durham, NC}{}{\begin{itemize}%
 \item As a Research Data Specialist, I am responsible for managing research data in various forms, including manual and automatic annotations, survey results, eye-tracking data, audio, and video. My role involves ensuring that all data  complete, up-to-date, and stored securely, while transforming it in ways that are suitable for analyzing it or making it public.%
 \item To achieve this, I maintain code in the lab's R and Python packages and write one-off scripts to automate various data manipulation tasks, ensuring that they are done in a consistent manner - across repeated runs and data subsets (e.g., participants, sessions). I am the primary point of contact for computer-related matters in the lab, I provide technical support to colleagues, helping them with code, analysis, and software troubleshooting.%
 \item I believe that my work plays an important role in supporting the success of the lab's research efforts. It is rewarding to work in an environment where my skills and expertise are valued and appreciated.%
 \end{itemize}}
 
-\hypertarget{research-experience}{%
-\section{Research Experience}\label{research-experience}}
+\hypertarget{academic-experience}{%
+\section{Academic Experience}\label{academic-experience}}
 
 \nopagebreak
-    \cventry{March 2018--Present}{Center for Decision Making}{Research Project Lead}{HSE University, Moscow}{}{\begin{itemize}%
-\item I ran two follow-up experiments on the timecourse of negative sentence processing. Behavioral, mouse-tracking, online experiments. The second one had to be done online due to the COVID-19 pandemic. Transferring a mouse-tracking experiment online in a way that would closely mimic the laboratory conditions was a big challenge. Which I solved extremely well, if I may so: the experiment had several properties that no commercial online experiment service provided at that time.%
-\end{itemize}}
-    \cventry{July 2018--June 2021}{Center for Decision Making}{Research Project Lead}{HSE University, Moscow}{}{\begin{itemize}%
-\item I led a study validating an alleged psychophysiological marker of hierarchical syntax processing of speech. The study was run as a registered report which was challenging but ultimately the right choice. In this project, I played all the CRediT taxonomy roles except Funding Acquisition. Our code and data are publicly available, the MEG data is in BIDS format on openneuro. The article we published about the project was my first (and currently only) first-author article.%
-\end{itemize}}
-    \cventry{September 2018--March 2019}{Master's Program ``Cognitive Sciences and Technologies''}{Discussion/Practice Session Tutor}{HSE University, Moscow}{}{\begin{itemize}%
-\item Digital Signal Processing (20+ students irst-year cognitive science Master's students, ~10 sessions).%
-\end{itemize}}
-    \cventry{July 2017--February 2018}{Center for Bioelectric Interfaces}{Research Programmer}{HSE University, Moscow}{}{\begin{itemize}%
-\item I wrote software for real-time EEG source reconstruction and 3D visualization using Python, Qt, mne-python. The project involved implementation of source reconstruction algorithms and brain structures visualization in an efficient parallelized way suitable for real-time use. The development was continuted by my colleagues, the result was patented and is currently used as part of a software suite of an EEG and BIC equipment manufacturer.%
-\end{itemize}}
-    \cventry{September 2015--June 2017}{Master's Program ``Cognitive Sciences and Technologies''}{Master's Student}{HSE University, Moscow}{}{\begin{itemize}%
-\item My thesis project was on EEG source reconstruction modeling surface propagation of epileptic spikes.%
-\end{itemize}}
-    \cventry{January 2017--March 2017}{Master's Program ``Cognitive Sciences and Technologies''}{Discussion/Practice Session Tutor}{HSE University, Moscow}{}{\begin{itemize}%
-\item Experimental Design and Statistics (two groups of ~15 students first-year cognitive science Master's students, ~25 sessions each group). I additionally incorporated an independent course on data analysis and visualization in R into the sessions.%
-\end{itemize}}
-    \cventry{April 2015--February 2016}{Psychophysiology Lab}{Research Programmer}{HSE University, Moscow}{}{\begin{itemize}%
-\item I worked on a set of studies of perceptual decision making and sustained attention using EEG. I helped with writing code (Matlab, EEGLAB) for the time-frequency analysis, multivariate statistics, and data visualization. For one of the studies I also participated in writing up the results leading to my very first scientific paper authorship.%
-\end{itemize}}
+    \cventry{March 2018 -- Present}{Research Project Lead}{\newline Mouse-tracking study of online processing of negation}{}{}{\empty}
+    \cventry{July 2018 -- June 2021}{Research Project Lead}{\newline Validating M/EEG marker of hierarchical syntactic processing}{}{}{\empty}
+    \cventry{September 2018 -- March 2019}{Recitation Instructor}{\newline Qualitative and Quantitative Research Methods in Psychology}{}{}{\empty}
+    \cventry{July 2017 -- February 2018}{Research Programmer}{\newline Real-time EEG source recostruction and visualization software}{}{}{\empty}
+    \cventry{September 2015 -- June 2017}{Master's Student}{\newline Modeling epileptic spikes as cortical surface activity propagation}{}{}{\empty}
+    \cventry{January 2017 -- March 2017}{Recitation Instructor}{\newline Digital Signal Processing}{}{}{\empty}
+    \cventry{April 2015 -- February 2016}{Research Programmer}{\newline EEG study of attention during auditory perceptual decision making}{}{}{\empty}
 
 \hypertarget{non-academic-jobs}{%
 \section{Non-Academic Jobs}\label{non-academic-jobs}}
 
 \nopagebreak
-    \cventry{September 2014--May 2015}{-}{Maths Tutor}{Self-employed, Moscow}{}{\begin{itemize}%
+    \cventry{September 2014 -- May 2015}{Maths Tutor}{}{Self-employed, Moscow}{}{\begin{itemize}%
 \item I worked with a range of students: from middle school students to graduate school applicants. I successfully helped both those struggling with maths and those interested in more advanced topics achieve their goals.%
 \end{itemize}}
-    \cventry{July 2011--July 2014}{Credit Risk, Collections}{Credit Risk Analyst}{Retail Banks, Moscow}{}{\begin{itemize}%
+    \cventry{July 2011 -- July 2014}{Credit Risk Analyst}{Credit Risk Department, Collections Department}{Retail Banks, Moscow}{}{\begin{itemize}%
 \item I did analysis, visualization, and predicitve modeling of the risk of default for both potential new and existing customers - credit scoring and credit portfolio analyisis. SQL, SAS, Excel. Logistic regression and decision trees.%
 \end{itemize}}
 
@@ -184,12 +170,6 @@ friends to the sport.}
 \subsection{University courses}\label{university-courses}}
 
 \nopagebreak
-    \cventry{April-June, 2020}{Psychology Department}{Python for Data Extraction and Data Mining}{HSE University, Moscow}{}{\begin{itemize}%
-\item Introduction to Python for first-year bachelor students. The course blended a MOOC with 5 remote discussion/practice sessions. I led the sessions for four groups of students out of seven.%
-\end{itemize}}
-    \cventry{September-December, 2019 and 2020}{University-wide course}{Introduction to Programming}{HSE University, Moscow}{}{\begin{itemize}%
-\item Introduction to Python for third/fourth-year bachelor students from various departments. The course blended a MOOC with ~7 lectures and ~14 discussion practice sessions. I led the session for two groups of students.%
-\end{itemize}}
     \cventry{September, 2018 - March, 2019}{Master's program 'Cognitive science and technologies'}{Qualitative and Quantitative Research Methods in Psychology}{HSE University, Moscow}{}{\begin{itemize}%
 \item From the syllabus: 'The course reviews the principal steps taken during a psychological research study and aims to provide students with the knowledge and competencies necessary to plan and conduct research projects of their own leading to M.Sc. dissertation and future scientific publications.' I led the discussion/practice sessions for the first-year cognitive science Master's students. The sessions combined the material from the lectures with a pretty much independent course on statistics using R.%
 \end{itemize}}
@@ -201,12 +181,6 @@ friends to the sport.}
 \subsection{Mini courses}\label{mini-courses}}
 
 \nopagebreak
-    \cventry{November, 3-5, 2020}{Applied Cogntive Science Summer School}{Reproducible Resarch}{HSE University, Moscow}{}{\begin{itemize}%
-\item Three 2-hour-long workshops on reproducible code using git, reproducible software environment using conda, reproducible articles using renv, r-markdown, and papaja.%
-\end{itemize}}
-    \cventry{June, 15-18, 2019}{Applied Cogntive Science Summer School}{Component Analysis and Dimensionality Reduction for M/EEG data}{HSE University, Moscow}{}{\begin{itemize}%
-\item Three 2-hour-long workshops taught together with Egor Levchenko. Intuitive visual explanation of covariance matrices, whitening and decorrelation methods in general. A short detour into ICA. Examples of applications from authors' research: inter-subject correlation of MEG data acquired during naturalistic stimuli viewing and frequency-tagging analysis of MEG data acquired during listening to speech.%
-\end{itemize}}
 
 \hypertarget{training}{%
 \section{Training}\label{training}}
