--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -99,7 +99,7 @@ friends to the sport.}
 \section{Current Position}\label{current-position}}
 
 \nopagebreak
-    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\newline Supervised by Elika Bergelson, Bergelson Lab, Duke University, Durham, NC}{}{\begin{itemize}%
+    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\textbackslash newline Supervised by Elika Bergelson, Bergelson Lab, Duke University,    Durham, NC}{}{\begin{itemize}%
 \item As a Research Data Specialist, I am responsible for managing research data in various forms, including manual and automatic annotations, survey results, eye-tracking data, audio, and video. My role involves ensuring that all data  complete, up-to-date, and stored securely, while transforming it in ways that are suitable for analyzing it or making it public.%
 \item To achieve this, I maintain code in the lab's R and Python packages and write one-off scripts to automate various data manipulation tasks, ensuring that they are done in a consistent manner - across repeated runs and data subsets (e.g., participants, sessions). I am the primary point of contact for computer-related matters in the lab, I provide technical support to colleagues, helping them with code, analysis, and software troubleshooting.%
 \item I believe that my work plays an important role in supporting the success of the lab's research efforts. It is rewarding to work in an environment where my skills and expertise are valued and appreciated.%
@@ -143,25 +143,25 @@ friends to the sport.}
 \subsection{Published}\label{published}}
 
 \nopagebreak
-    \cventry{2021}{\textbf{Evgenii Kalenkovich}, Anna Shestakova, Nina Kazanina}{Frequency Tagging of Syntactic Structure or Lexical Properties; A Registered MEG Study}{Cortex}{}{\empty}
-    \cventry{2021}{Yuri G. Pavlov, ..., Faisal Mushtaq}{\#EEGManyLabs: Investigating the Replicability of Influential EEG Experiments}{Cortex}{}{\empty}
-    \cventry{2017}{Nikita A. Novikov, Yulia M. Nurislamova, Natalia A. Zhozhikashvili,\textbf{ Evgenii E. Kalenkovich}, Anna A. Lapina, Boris V. Chernyshev}{Slow and Fast Responses: Two Mechanisms of Trial Outcome Processing Revealed by EEG Oscillations}{Frontiers in Human Neuroscience}{}{\empty}
+    \cventry{2021}{Frequency Tagging of Syntactic Structure or Lexical Properties; A Registered MEG Study}{\textbf{Evgenii Kalenkovich}, Anna Shestakova, Nina Kazanina}{Cortex}{}{\empty}
+    \cventry{2021}{\#EEGManyLabs: Investigating the Replicability of Influential EEG Experiments}{Yuri G. Pavlov, ..., Faisal Mushtaq}{Cortex}{}{\empty}
+    \cventry{2017}{Slow and Fast Responses: Two Mechanisms of Trial Outcome Processing Revealed by EEG Oscillations}{Nikita A. Novikov, Yulia M. Nurislamova, Natalia A. Zhozhikashvili,\textbf{ Evgenii E. Kalenkovich}, Anna A. Lapina, Boris V. Chernyshev}{Frontiers in Human Neuroscience}{}{\empty}
 
 \hypertarget{in-progress}{%
 \subsection{In progress}\label{in-progress}}
 
 \nopagebreak
-    \cventry{preprint}{\textbf{Evgenii Kalenkovich}, Egor Levchenko}{A Reproducible MEEG Data Analysis Workflow with conda, Snakemake, and R Markdown}{}{}{\empty}
-    \cventry{}{\textbf{Evgenii Kalenkovich}, Ekaterina Stupina}{Phonemes in Speech Perception: Selective Adaptation to Missing Phonemes}{}{}{\empty}
+    \cventry{preprint}{A Reproducible MEEG Data Analysis Workflow with conda, Snakemake, and R Markdown}{\textbf{Evgenii Kalenkovich}, Egor Levchenko}{}{}{\empty}
+    \cventry{}{Phonemes in Speech Perception: Selective Adaptation to Missing Phonemes}{\textbf{Evgenii Kalenkovich}, Ekaterina Stupina}{}{}{\empty}
 
 \hypertarget{posters}{%
 \section{Posters}\label{posters}}
 
 \nopagebreak
-    \cventry{October 2020}{\textbf{Evgenii Kalenkovich}, Nina Kazanina}{Syntactic vs. Lexical Effects in Syntactic Frequency Tagging}{SNL 2020, Online}{}{\empty}
-    \cventry{September 2020}{\textbf{Evgenii Kalenkovich}, Emily J. Darley, Christopher Kent, Nina Kazanina}{Psychological mechanisms contributing to the effort in negation processing}{AMLaP 2020, Online}{}{\empty}
-    \cventry{September 2019}{\textbf{Evgenii Kalenkovich}, Emily J. Darley, Christopher Kent, Nina Kazanina}{Competition between local priming and global outcome in processing of negatives}{AMLaP 2019, Moscow}{}{\empty}
-    \cventry{September 2019}{\textbf{Evgenii Kalenkovich}, Ekaterina Stupina}{Do we need phonemes in speech perception? An auditory selective adaptation study}{AMLaP 2019, Moscow}{}{\empty}
+    \cventry{October 2020}{Syntactic vs. Lexical Effects in Syntactic Frequency Tagging}{\textbf{Evgenii Kalenkovich}, Nina Kazanina}{SNL 2020, Online}{}{\empty}
+    \cventry{September 2020}{Psychological mechanisms contributing to the effort in negation processing}{\textbf{Evgenii Kalenkovich}, Emily J. Darley, Christopher Kent, Nina Kazanina}{AMLaP 2020, Online}{}{\empty}
+    \cventry{September 2019}{Competition between local priming and global outcome in processing of negatives}{\textbf{Evgenii Kalenkovich}, Emily J. Darley, Christopher Kent, Nina Kazanina}{AMLaP 2019, Moscow}{}{\empty}
+    \cventry{September 2019}{Do we need phonemes in speech perception? An auditory selective adaptation study}{\textbf{Evgenii Kalenkovich}, Ekaterina Stupina}{AMLaP 2019, Moscow}{}{\empty}
 
 \hypertarget{teaching}{%
 \section{Teaching}\label{teaching}}
@@ -170,10 +170,16 @@ friends to the sport.}
 \subsection{University courses}\label{university-courses}}
 
 \nopagebreak
-    \cventry{September, 2018 - March, 2019}{Master's program 'Cognitive science and technologies'}{Qualitative and Quantitative Research Methods in Psychology}{HSE University, Moscow}{}{\begin{itemize}%
+    \cventry{April-June, 2020}{Python for Data Extraction and Data Mining}{Psychology Department}{HSE University, Moscow}{}{\begin{itemize}%
+\item Introduction to Python for first-year bachelor students. The course blended a MOOC with 5 remote discussion/practice sessions. I led the sessions for four groups of students out of seven.%
+\end{itemize}}
+    \cventry{September-December, 2019 and 2020}{Introduction to Programming}{University-wide course}{HSE University, Moscow}{}{\begin{itemize}%
+\item Introduction to Python for third/fourth-year bachelor students from various departments. The course blended a MOOC with ~7 lectures and ~14 discussion practice sessions. I led the session for two groups of students.%
+\end{itemize}}
+    \cventry{September, 2018 - March, 2019}{Qualitative and Quantitative Research Methods in Psychology}{Master's program 'Cognitive science and technologies'}{HSE University, Moscow}{}{\begin{itemize}%
 \item From the syllabus: 'The course reviews the principal steps taken during a psychological research study and aims to provide students with the knowledge and competencies necessary to plan and conduct research projects of their own leading to M.Sc. dissertation and future scientific publications.' I led the discussion/practice sessions for the first-year cognitive science Master's students. The sessions combined the material from the lectures with a pretty much independent course on statistics using R.%
 \end{itemize}}
-    \cventry{January-March, 2017}{Master's program 'Cognitive science and technologies'}{Digital Signal Processing}{HSE University, Moscow}{}{\begin{itemize}%
+    \cventry{January-March, 2017}{Digital Signal Processing}{Master's program 'Cognitive science and technologies'}{HSE University, Moscow}{}{\begin{itemize}%
 \item Basics of digital signal processing: Fourier, linear filters, random processes. I led approximately seven discussion/practice sessions.%
 \end{itemize}}
 
@@ -181,6 +187,12 @@ friends to the sport.}
 \subsection{Mini courses}\label{mini-courses}}
 
 \nopagebreak
+    \cventry{November, 3-5, 2020}{Reproducible Resarch}{Applied Cogntive Science Summer School}{HSE University, Moscow}{}{\begin{itemize}%
+\item Three 2-hour-long workshops on reproducible code using git, reproducible software environment using conda, reproducible articles using renv, r-markdown, and papaja.%
+\end{itemize}}
+    \cventry{June, 15-18, 2019}{Component Analysis and Dimensionality Reduction for M/EEG data}{Applied Cogntive Science Summer School}{HSE University, Moscow}{}{\begin{itemize}%
+\item Three 2-hour-long workshops taught together with Egor Levchenko. Intuitive visual explanation of covariance matrices, whitening and decorrelation methods in general. A short detour into ICA. Examples of applications from authors' research: inter-subject correlation of MEG data acquired during naturalistic stimuli viewing and frequency-tagging analysis of MEG data acquired during listening to speech.%
+\end{itemize}}
 
 \hypertarget{training}{%
 \section{Training}\label{training}}
@@ -189,11 +201,11 @@ friends to the sport.}
 \subsection{Summer schools}\label{summer-schools}}
 
 \nopagebreak
-    \cventry{}{University of Groningen, Groningen}{\href{https://www.rug.nl/research/fse/cognitive-systems-and-materials/news/seminars/agenda/2019/20190408_springschoolcognitivemodeling?lang=en}{Groningen Spring School on Cognitive Modeling}}{2019}{}{\begin{itemize}%
+    \cventry{}{\href{https://www.rug.nl/research/fse/cognitive-systems-and-materials/news/seminars/agenda/2019/20190408_springschoolcognitivemodeling?lang=en}{Groningen Spring School on Cognitive Modeling}}{University of Groningen, Groningen}{2019}{}{\begin{itemize}%
 \item Error-driven learning: simulating the time course of learning (5 days, active participation)%
 \item Nengo: converting high-level cognitive theories into low-level spiking neuron implementations (5 days, auditing)%
 \end{itemize}}
-    \cventry{}{Psychology Institute of Russain Academy of Sciences, Moscow}{Network modeling and analysis in human cognition research school}{2018}{}{\begin{itemize}%
+    \cventry{}{Network modeling and analysis in human cognition research school}{Psychology Institute of Russain Academy of Sciences, Moscow}{2018}{}{\begin{itemize}%
 \item Basics of graph theory: measures, statistics, application (4 days, last day - group project appying network analysis to the Remote Assocation Task (RAT) data)%
 \end{itemize}}
 
@@ -201,25 +213,25 @@ friends to the sport.}
 \subsection{MOOCs}\label{moocs}}
 
 \nopagebreak
-    \cventry{}{Coursera, online}{\href{https://www.coursera.org/learn/datasciencemathskills}{Data Science Math Skills}}{2020}{}{\begin{itemize}%
+    \cventry{}{\href{https://www.coursera.org/learn/datasciencemathskills}{Data Science Math Skills}}{Coursera, online}{2020}{}{\begin{itemize}%
 \item This course covered high-school maths. Honestly, this was an attempt at productive procrastination during the COVID-19 lockdown. \href{https://coursera.org/share/d06128df3dbf0ed99de987da0d257f09}{Certificate.}%
 \end{itemize}}
-    \cventry{}{Coursera, online}{\href{https://www.coursera.org/learn/designexperiments}{Designing, Running, and Analyzing Experiments}}{2018}{}{\begin{itemize}%
+    \cventry{}{\href{https://www.coursera.org/learn/designexperiments}{Designing, Running, and Analyzing Experiments}}{Coursera, online}{2018}{}{\begin{itemize}%
 \item \href{https://coursera.org/share/13d8627b09f871715aec86dcd7dd0fbe}{Certificate.}%
 \end{itemize}}
-    \cventry{}{Coursera, online}{\href{https://www.coursera.org/learn/discrete-calculus}{Single Variable Calculus (5 courses)}}{2018}{}{\begin{itemize}%
+    \cventry{}{\href{https://www.coursera.org/learn/discrete-calculus}{Single Variable Calculus (5 courses)}}{Coursera, online}{2018}{}{\begin{itemize}%
 \item In addition to being a refresher of Calculus 101, this course taught me discrete approximation for differential equation solutions. Completed, no certificate.%
 \end{itemize}}
-    \cventry{}{Coursera, online}{\href{https://www.coursera.org/specializations/data-science-python}{Applied Data Science with Python specialization}}{2017}{}{\begin{itemize}%
+    \cventry{}{\href{https://www.coursera.org/specializations/data-science-python}{Applied Data Science with Python specialization}}{Coursera, online}{2017}{}{\begin{itemize}%
 \item Five courses covering basics of data manipulation, text mining, machine learning, social network analysis, plotting and data representation. \href{https://coursera.org/share/cb4c8abff922cf688a98cc30d55cff1a}{Certificate.}%
 \end{itemize}}
-    \cventry{}{Udacity, online}{\href{https://classroom.udacity.com/courses/cs101}{Intro to Computer Science}}{2014}{}{\begin{itemize}%
+    \cventry{}{\href{https://classroom.udacity.com/courses/cs101}{Intro to Computer Science}}{Udacity, online}{2014}{}{\begin{itemize}%
 \item An introductory Python course. \href{https://confirm.udacity.com/QXWAQCFL}{Certificate.}%
 \end{itemize}}
-    \cventry{}{Coursera, online}{Computing for Data Analysis}{2013}{}{\begin{itemize}%
+    \cventry{}{Computing for Data Analysis}{Coursera, online}{2013}{}{\begin{itemize}%
 \item 'In this course students learn programming in R, reading data into R, creating data graphics, accessing and installing R packages, writing R functions, debugging, and organizing and commenting R code.' \href{https://www.coursera.org/api/legacyCertificates.v1/spark/statementOfAccomplishment/970940~3547767/pdf}{Certificate.}%
 \end{itemize}}
-    \cventry{}{Udacity, online}{\href{https://classroom.udacity.com/courses/cs253}{Web Development}}{2013}{}{\begin{itemize}%
+    \cventry{}{\href{https://classroom.udacity.com/courses/cs253}{Web Development}}{Udacity, online}{2013}{}{\begin{itemize}%
 \item Basics, forms, templates, databases, user accounts, security, APIs, caching, scaling. \href{https://confirm.udacity.com/7H2KDEWK}{Certificate.}%
 \end{itemize}}
 
@@ -227,13 +239,13 @@ friends to the sport.}
 \section{Extracurricular activity}\label{extracurricular-activity}}
 
 \nopagebreak
-    \cventry{}{2020-2021}{ReproducibiliTea Journal Club organizer}{}{}{\begin{itemize}%
+    \cventry{2020-2021}{ReproducibiliTea Journal Club organizer}{}{}{}{\begin{itemize}%
 \item Along with two other organizers, we ran the Moscow chapter of the ReproducibiliTea Journal Club initiative. In addition to discussing reproducibility- and replicability-related papers, we found speakers to give presentations or workshops on the topics voted for by the community.%
 \end{itemize}}
-    \cventry{}{2020}{Frequency-tagging analysis tutorial for mne-python}{}{}{\begin{itemize}%
+    \cventry{2020}{Frequency-tagging analysis tutorial for mne-python}{}{}{}{\begin{itemize}%
 \item As a starting point for the freqtag package described above, Dominik Welke and I wrote a tutorial showing how a very basic frequency-tagging dataset can be analyzed. \textbackslash href\{https://mne.tools/stable/auto\_tutorials/time-freq/50\_ssvep.html\}\{Link.\}%
 \end{itemize}}
-    \cventry{}{2021}{Tutorial on writing computationally reproducible workflows for M/EEG data analysis}{}{}{\begin{itemize}%
+    \cventry{2021}{Tutorial on writing computationally reproducible workflows for M/EEG data analysis}{}{}{}{\begin{itemize}%
 \item Out of the frustration brought by trying to reproduce (get the same results from the same data) both our own and some public M/EEG results, Egor Levchenko and I decided to write a tutorial on a way an M/EEG data analysis can be done reproducibly. It involves using package management systems (conda, renv), workflow management systems (Snakemake, nipype) and literate programming (r-markdown, codebraid)%
 \end{itemize}}
 
