--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -99,7 +99,7 @@ friends to the sport.}
 \section{Current Position}\label{current-position}}
 
 \nopagebreak
-    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\textbackslash newline Supervised by Elika Bergelson, Bergelson Lab, Duke University,    Durham, NC}{}{\begin{itemize}%
+    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\newline Supervised by Elika Bergelson, Bergelson Lab, Duke University,    Durham, NC}{}{\begin{itemize}%
 \item As a Research Data Specialist, I am responsible for managing research data in various forms, including manual and automatic annotations, survey results, eye-tracking data, audio, and video. My role involves ensuring that all data  complete, up-to-date, and stored securely, while transforming it in ways that are suitable for analyzing it or making it public.%
 \item To achieve this, I maintain code in the lab's R and Python packages and write one-off scripts to automate various data manipulation tasks, ensuring that they are done in a consistent manner - across repeated runs and data subsets (e.g., participants, sessions). I am the primary point of contact for computer-related matters in the lab, I provide technical support to colleagues, helping them with code, analysis, and software troubleshooting.%
 \item I believe that my work plays an important role in supporting the success of the lab's research efforts. It is rewarding to work in an environment where my skills and expertise are valued and appreciated.%
@@ -243,7 +243,7 @@ friends to the sport.}
 \item Along with two other organizers, we ran the Moscow chapter of the ReproducibiliTea Journal Club initiative. In addition to discussing reproducibility- and replicability-related papers, we found speakers to give presentations or workshops on the topics voted for by the community.%
 \end{itemize}}
     \cventry{2020}{Frequency-tagging analysis tutorial for mne-python}{}{}{}{\begin{itemize}%
-\item As a starting point for the freqtag package described above, Dominik Welke and I wrote a tutorial showing how a very basic frequency-tagging dataset can be analyzed. \textbackslash href\{https://mne.tools/stable/auto\_tutorials/time-freq/50\_ssvep.html\}\{Link.\}%
+\item As a starting point for the freqtag package described above, Dominik Welke and I wrote a tutorial showing how a very basic frequency-tagging dataset can be analyzed. \href{https://mne.tools/stable/auto_tutorials/time-freq/50_ssvep.html}{Link.}%
 \end{itemize}}
     \cventry{2021}{Tutorial on writing computationally reproducible workflows for M/EEG data analysis}{}{}{}{\begin{itemize}%
 \item Out of the frustration brought by trying to reproduce (get the same results from the same data) both our own and some public M/EEG results, Egor Levchenko and I decided to write a tutorial on a way an M/EEG data analysis can be done reproducibly. It involves using package management systems (conda, renv), workflow management systems (Snakemake, nipype) and literate programming (r-markdown, codebraid)%
