update aboutme and move to its own section
That text is handled weirdly when input via the aboutme field of the preamble.
I think the reason is that it populates the quote template in moderncsv.

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -52,16 +52,6 @@
 
 
 
-\quote{I am a research data specialist in the Bergelson lab where we
-study language acquisition - babies learning language. I have a
-background in mathematics and cognitive science, making me well-suited
-for my role in the lab. Prior to my current position, I led several
-projects in psycho- and neurolinguistics and worked as a data analyst in
-the banking industry. In my free time, I enjoy reading about the
-intersection of cognitive computational modeling, developmental
-psychology, and linguistics, and hope to make contributions to this
-field in the future. I also enjoy indoor bouldering and introducing
-friends to the sport.}
 
 % Pandoc CSL macros
 \newlength{\cslhangindent}
@@ -94,6 +84,31 @@ friends to the sport.}
 \makecvtitle
 
 
+
+\hypertarget{about-me}{%
+\section{About Me}\label{about-me}}
+
+\begin{itemize}
+\tightlist
+\item
+  I am a Research Data Specialist in the Bergelson lab where we study
+  language acquisition - babies learning language. By delegating a
+  subset of data/coding/software tasks to a dedicated specialist - me,
+  our lab improves both the handling of such tasks and the efficiency of
+  our researchers.
+\item
+  My background is in Maths and Cognitive Science, so this job is
+  tailor-made for me.
+\item
+  Before this job, I worked in research. I might do that again some day.
+  I am still working on two projects from that part of my life.
+\item
+  In my free time, I enjoy reading about the intersection of cognitive
+  computational modeling, developmental psychology, and linguistics, and
+  hope to make contributions to this area in the future.
+\item
+  I also enjoy indoor bouldering and introducing friends to the sport.
+\end{itemize}
 
 \hypertarget{current-position}{%
 \section{Current Position}\label{current-position}}
