--- a/cv/cv.Rmd
+++ b/cv/cv.Rmd
@@ -11,12 +11,6 @@ output:
     theme: classic
     keep_tex: yes
 headcolor: 009ACD
-aboutme: >
-  I am a research data specialist in the Bergelson lab where we study language acquisition - babies learning language. 
-
-  I have a background in mathematics and cognitive science, making me well-suited for my role in the lab. Prior to my current position, I led several projects in psycho- and neurolinguistics and worked as a data analyst in the banking industry.
-
-  In my free time, I enjoy reading about the intersection of cognitive computational modeling, developmental psychology, and linguistics, and hope to make contributions to this field in the future. I also enjoy indoor bouldering and introducing friends to the sport.
 ---
 
 ```{r setup, include=FALSE}
@@ -97,6 +91,17 @@ extracurricular <- read_csv(
   here::here("data", "extracurricular.csv"),
   col_types = cols(.default = "c"))
 ```
+
+# About Me
+
+- I am a Research Data Specialist in the Bergelson lab where we study language acquisition - babies learning language.
+  By delegating a subset of data/coding/software tasks to a dedicated specialist - me, our lab improves both the handling of such tasks and the efficiency of our researchers.
+- My background is in Maths and Cognitive Science, so this job is tailor-made for me.
+- Before this job, I worked in research.
+  I might do that again some day.
+  I am still working on two projects from that part of my life.
+- In my free time, I enjoy reading about the intersection of cognitive computational modeling, developmental psychology, and linguistics, and hope to make contributions to this area in the future.
+- I also enjoy indoor bouldering and introducing friends to the sport.
 
 # Current Position
 
